--- a/sr-bio.html
+++ b/sr-bio.html
@@ -7,13 +7,36 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900,900i&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>SR</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>SnoRiders</title>
   </head>
 
   <body>
+    <!-- NAV -->
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="sr-bio.html">
+        <img src="images/icons/sr_icon.svg" width="40" height="40" class="d-inline-block align-top" alt=""><span class="title">snoriders.west</span>&nbsp;&nbsp;&nbsp;<span class="subheadline">#snoriders</span></a>
+        
+    </nav> <!-- /NAV -->
 
- 
+    <!-- Block level buttons -->
+    <div class="links mt-5 row">
+      <div class="col-md-6"> 
+        <a class="btn btn-lg btn-block btnDesign" href="design.html"><strong>Stories</strong></a>
+        <a class="btn btn-lg btn-block btnDesign" href="development.html"><strong>Travel</strong></a>
+      </div>
+      <div class="col-md-6"> 
+        <a class="btn btn-lg btn-block btnDesign" href="design.html"><strong>Gear</strong></a>
+        <a class="btn btn-lg btn-block btnDesign" href="development.html"><strong>Events</strong></a>
+      </div>
+    </div>
+    <!-- /Block level buttons -->
+
+
+
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jQuery-3.4.1.js"></script>    
