--- a/sr-bio.html
+++ b/sr-bio.html
@@ -17,9 +17,10 @@
         <a class="navbar-brand" href="sr-bio.html">
         <img src="images/icons/sr_icon.svg" width="40" height="40" class="d-inline-block align-top" alt=""><span class="title">snoriders.west</span>&nbsp;&nbsp;&nbsp;<span class="subheadline">#snoriders</span></a>
         
-    </nav> <!-- /NAV -->
+    </nav> 
+    <!-- /NAV -->
 
-    <!-- Block level buttons -->
+    <!-- LINKS Button level buttons -->
     <div class="links mt-5 row">
       <div class="col-md-6"> 
         <a class="btn btn-lg btn-block btnDesign" href="design.html"><strong>Stories</strong></a>
@@ -32,7 +33,57 @@
     </div>
     <!-- /Block level buttons -->
 
+    <!-- CARDS Featured Content-->
+    <div class="card-deck mt-5 row">
+      <div class="col-md-6">
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
 
+      <div class="col-md-6">
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /CARDS Featured Content-->
 
 
 
