--- a/sr-bio.html
+++ b/sr-bio.html
@@ -31,18 +31,18 @@
         <a class="btn btn-lg btn-block btnDesign" href="development.html"><strong>Events</strong></a>
       </div>
     </div>
+
+    <div class="desktopLinks mt-5 mb-5">
+      <a class="btn btn-lg btn-block btnDesktop" href="design.html"><strong>Stories</strong></a>
+      <a class="btn btn-lg btn-block btnDesktop" href="development.html"><strong>Travel</strong></a>
+      <a class="btn btn-lg btn-block btnDesktop" href="design.html"><strong>Gear</strong></a>
+      <a class="btn btn-lg btn-block btnDesktop" href="development.html"><strong>Events</strong></a>
+    </div>
     <!-- /Block level buttons -->
 
     <!-- CARDS Featured Content-->
-    <div class="card-deck mt-5 row">
-      <div class="col-md-6">
-        <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
-          <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
+    <div class="card-deck mt-5 mb-5 row">
+      <div class="col-md-4">
         <div class="card mt-4">
           <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
           <div class="card-body">
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-4">
         <div class="card mt-4">
           <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
           <div class="card-body">
@@ -67,6 +67,16 @@
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
         <div class="card mt-4">
           <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
           <div class="card-body">
@@ -85,8 +95,18 @@
     </div>
     <!-- /CARDS Featured Content-->
 
+    <!-- FOOTER BUTTONS Block level buttons-->
+    <div class="footerLinks mt-5 row mb-5">
+      <div class="col-md-6"> 
+        <a class="btn btn-lg btn-block btnDesign" href="design.html"><strong class="eNewsText">eNewsletter&nbsp;
+          <svg width="37" height="38" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M4.17352364 37H32.4621998c1.8546148-.0015041 3.3555402-1.5237415 3.3555402-3.3994799V15.4176672c0-.2842931-.1248279-.5535452-.3388219-.7355701l-4.6827596-4.00554934V3.69552447c0-.71450652-.2808666-1.40040198-.7801936-1.90581282C29.516638 1.28430082 28.8389789 1 28.133122 1H8.68953142C7.21831787 1 6.02649489 2.20636272 6.02649489 3.69552447v6.83507989L1.15656194 14.6820971c-.213994.1820095-.33882194.4512693-.33882194.7355701v18.1828529c0 1.8757384 1.50092543 3.3979781 3.35554016 3.3994799h.00024348zm28.28601316-1.9252591H4.17352364c-.80397073-.0016196-1.45337121-.6619823-1.45337121-1.4742208V17.2544746l10.84236297 7.7631105-7.69617553 5.9609598c-.42056955.3188921-.50525411.9220619-.19021689 1.3477622.31504483.4241986.91094871.511418 1.33151826.1925375l8.18389166-6.3387183 2.6630366 1.9253746c.3284209.2361588.7697697.2361588 1.0996819 0l2.6630365-1.9253746 8.1869352 6.326781c.4190858.3188921 1.016481.2331513 1.3315182-.1925375.3150449-.4257003.2288538-1.0288817-.1902169-1.3477622l-7.6813386-5.9490225 10.6521461-7.6248686V33.605141c-.001486.8107752-.6508842 1.4680981-1.4533712 1.4695999h-.0034239zm.92434-19.6616561l-2.5872541 1.8516713v-4.0687016l2.5872541 2.2170303zM8.68991946 2.92962585H28.1365535c.2021055 0 .3953088.08132782.5379714.22573092.1426627.14440309.2229114.33994799.2229114.54453445V18.6169236l-10.4843748 7.5135819-10.48133136-7.5135819V3.69527032c.00297195-.42269675.34030944-.76414268.75790019-.76564447h.00028913zM6.02688293 17.2660654l-2.69274841-1.9253746 2.69274841-2.3104496v4.2358242z" stroke="#FFF" fill="#FFF" fill-rule="nonzero"/><path d="M9.92732904 16.0952586l1.12032036-1.7188596c.5812328.3723477 1.5597012.7591694 2.7933021.7591694 1.205197 0 1.6022651-.3868217 1.6022651-1.0886873 0-.9310807-.4821123-1.0742978-2.1978255-1.6187261-1.9283654-.6015628-2.85002603-1.3894263-2.85002603-3.12276001 0-2.07715639 1.30440113-3.12284465 3.63000233-3.12284465 1.460497 0 2.3821576.2578247 3.2187741.65903584l-.9642246 1.91946518c-.4963561-.24351993-1.2052808-.47265042-2.1978255-.47265042-1.0635126 0-1.5173048.27204485-1.5173048.94530084 0 .73064441.4112283.90255577 1.6731493 1.3179024 2.5098495.81655782 3.360626 1.37520622 3.360626 3.45227792 0 1.8766355-1.1343967 3.0511515-3.7008864 3.0511515-1.7441171 0-3.0203657-.3294333-3.97034646-.959775M22.7253367 11.3892617c.9632308 0 1.345828-.4322495 1.345828-1.57055489 0-1.15277898-.3825972-1.57038466-1.345828-1.57038466h-1.7706104v3.14093955h1.7706104zm-.3746667 1.8383756h-1.3818618v3.4770607h-2.1716161V6.31543624h3.9907675c2.509999 0 3.4407393 1.20574556 3.4407393 3.30888261 0 1.52818345-.4934507 2.74801295-1.7484918 3.29479875l1.6779155 3.7855804h-2.3124354L22.35067 13.2276373z" fill="#FFFFFE"/></g></svg></strong></a>
+      </div>
+      <div class="col-md-6"> 
+        <a class="btn btn-lg btn-block btnSubscribe" href="design.html"><strong class="subsText">Subscribe</strong></a>
+      </div>
+    </div>
 
-
+    <!-- /FOOTER BUTTONS Block level buttons-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
