--- a/sr-bio.html
+++ b/sr-bio.html
@@ -44,31 +44,14 @@
     <div class="card-deck mt-5 mb-5 row">
       <div class="col-md-4">
         <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
           <div class="card-body">
             <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
         <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
-          <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
-          <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-        <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
           <div class="card-body">
             <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -78,14 +61,31 @@
 
       <div class="col-md-4">
         <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
           <div class="card-body">
             <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
         <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.svg" alt="Card image cap">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
           <div class="card-body">
             <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
