--- a/sr-bio.html
+++ b/sr-bio.html
@@ -24,19 +24,19 @@
     <div class="links mt-5 row">
       <div class="col-md-6"> 
         <a class="btn btn-lg btn-block btnDesign" href="design.html"><strong>Stories</strong></a>
-        <a class="btn btn-lg btn-block btnDesign" href="development.html"><strong>Travel</strong></a>
+        <a class="btn btn-lg btn-block btnDesign2" href="development.html"><strong>Travel</strong></a>
       </div>
       <div class="col-md-6"> 
-        <a class="btn btn-lg btn-block btnDesign" href="design.html"><strong>Gear</strong></a>
-        <a class="btn btn-lg btn-block btnDesign" href="development.html"><strong>Events</strong></a>
+        <a class="btn btn-lg btn-block btnDesign3" href="design.html"><strong>Gear</strong></a>
+        <a class="btn btn-lg btn-block btnDesign4" href="development.html"><strong>Events</strong></a>
       </div>
     </div>
 
     <div class="desktopLinks mt-5 mb-5">
       <a class="btn btn-lg btn-block btnDesktop" href="design.html"><strong>Stories</strong></a>
-      <a class="btn btn-lg btn-block btnDesktop" href="development.html"><strong>Travel</strong></a>
-      <a class="btn btn-lg btn-block btnDesktop" href="design.html"><strong>Gear</strong></a>
-      <a class="btn btn-lg btn-block btnDesktop" href="development.html"><strong>Events</strong></a>
+      <a class="btn btn-lg btn-block btnDesktop2" href="development.html"><strong>Travel</strong></a>
+      <a class="btn btn-lg btn-block btnDesktop3" href="design.html"><strong>Gear</strong></a>
+      <a class="btn btn-lg btn-block btnDesktop4" href="development.html"><strong>Events</strong></a>
     </div>
     <!-- /Block level buttons -->
 
@@ -53,7 +53,24 @@
         <div class="card mt-4">
           <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
           <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <a href="https://snoriderswest.com/" class="btnCard2"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard3"><strong>Article Title</strong></a>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+        <div class="card mt-4">
+          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
+          <div class="card-body">
+            <a href="https://snoriderswest.com/" class="btnCard4"><strong>Article Title</strong></a>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
@@ -70,24 +87,7 @@
         <div class="card mt-4">
           <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
           <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
-          <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          </div>
-        </div>
-        <div class="card mt-4">
-          <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
-          <div class="card-body">
-            <a href="https://snoriderswest.com/" class="btnCard"><strong>Article Title</strong></a>
+            <a href="https://snoriderswest.com/" class="btnCard2"><strong>Article Title</strong></a>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           </div>
         </div>
