--- a/sr-bio.html
+++ b/sr-bio.html
@@ -41,7 +41,7 @@
     <!-- /Block level buttons -->
 
     <!-- CARDS Featured Content-->
-    <div class="card-deck mt-5 mb-5 row">
+    <div class="card-deck mt-5 row">
       <div class="col-md-4">
         <div class="card mt-4">
           <img class="card-img-top" src="images/thumb.png" alt="Card image cap">
